Fixed modal on mobile devices

--- a/client/src/components/Modal/Modal.module.less
+++ b/client/src/components/Modal/Modal.module.less
@@ -2,7 +2,7 @@
 
 .wrapper {
   height: 100%;
-  min-height: 100lvh;
+  min-height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
@@ -71,6 +71,7 @@
       position: fixed;
       top: 0px;
       left: 0px;
+      height: 50vh;
       align-items: start;
       justify-content: start;
       padding: 0px;
