--- a/client/src/components/boxes/BoxData/BoxDataOverview/ContentColumns/ContentColumns.module.less
+++ b/client/src/components/boxes/BoxData/BoxDataOverview/ContentColumns/ContentColumns.module.less
@@ -98,7 +98,8 @@
 
     .contentColumns {
       flex-direction: column;
-      width: 80%;
+      margin: auto;
+      align-items: center;
     }
   }
 }
